--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "next": "16.0.1",
+    "next-auth": "5.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "next": "16.0.1"
+    "bcryptjs": "^2.4.3",
+    "mongoose": "^8.8.1",
+    "stripe": "^16.8.0",
+    "cloudinary": "^1.41.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
