--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.3",
+    "mongoose": "^8.8.1",
     "next": "16.0.1",
-    "next-auth": "5.0.0",
+    "next-auth": "^4.24.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "bcryptjs": "^2.4.3",
-    "mongoose": "^8.8.1",
-    "stripe": "^16.8.0",
-    "cloudinary": "^1.41.3"
+    "react-icons": "^5.5.0",
+    "stripe": "^16.8.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1"
+    "eslint-config-next": "16.0.1",
+    "tailwindcss": "^4"
   }
 }
