--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.3",
+    "lucide-react": "^0.552.0",
     "mongoose": "^8.8.1",
     "next": "16.0.1",
     "next-auth": "^4.24.7",
